# scrapy_signal_crawler

./: Dockefile  Dockerfile  README.md  debug.py  docker_command.txt  pyproject.toml  scrapy.cfg
scrape_signals/: base_spider.py  items.py  middlewares.py  pipelines.py  settings.py
scrape_signals/spiders/: zulu_trade_api.py
src/: Dockefile  README.md  bot_runner.py  debug.py  trader_ids.json
src/scrape_signals/: base_spider.py  items.py  pipelines.py  settings.py
src/scrape_signals/spiders/: exness_api.py  zulu_trade_api.py
src/scrapy_tor_rotation/: __init__.py  middlewares.py  tor_controller.py
src/tor_proxy_docker/: Dockerfile  command.txt  entrypoint.sh  supervisord.conf
src/utils/: common.py  constant.py
tor_proxy_docker/: Dockerfile  command.txt
utils/: constant.py
