[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["duyet-lfg <duyet.mai@lfglobaltech.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
requests = "^2.28.2"
stem = "^1.8.1"
pysocks = "^1.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
