[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["duyet-lfg <duyet.mai@lfglobaltech.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
